UI Layer: Integrated update status rest API

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
@@ -12,7 +11,6 @@
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -41,11 +39,26 @@
         </button>
       </div>
       <div class="modal-body">
-        <p>Modal body text goes here.</p>
+        <form>
+        <div class="form-group">
+          <label for="ut_task_id">Task ID</label>
+          <input type="text" class="form-control" id="ut_task_id" disabled>
+        </div>
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <label class="input-group-text" for="ut_status">New Status</label>
+            </div>
+            <select class="custom-select" id="ut_status">
+              <option selected>Choose...</option>
+              <option value="STARTED">STARTED</option>
+              <option value="COMPLETED">COMPLETED</option>
+            </select>
+          </div>
+      </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button id="update_status_submit_btn" type="button" class="btn btn-primary">Update Status</button>
       </div>
     </div>
   </div>
@@ -103,7 +116,10 @@
             <input id="ct_frequency" type="text" class="form-control" placeholder="Enter frequency">
           </div> 
         </form>
-        <button id="create_task_submit_btn" type="submit" class="btn btn-primary float-right">Submit</button>
+         <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button id="create_task_submit_btn" type="button" class="btn btn-primary">Create Task</button>
+          </div>
       </div>
     </div>
   </div>
