UI Layer: Integrated Get Pending Tasks API. On page load pending tasks will be displayed in priority order

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,6 +25,13 @@
 
   <!-- Page Content -->
   <div class="container" id="task_list">
+  	<br/>
+	<div class="row">
+     <div class="alert alert-success" role="alert" style="margin: auto;">
+    Pending taks listed as per priority weighted against estimate!!
+	</div>
+	</div>
+	<br/>
     <ul class="list-group">
     </ul>
   </div>
